// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextfieldBase /> should not show error color when not have any error message 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-17 makeStyles-root-21 css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="makeStyles-cssLabel-15 makeStyles-cssLabel-19 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-9p2q6w-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="mui-2"
      id="mui-2-label"
    >
      Test
    </label>
    <div
      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl makeStyles-fontColor-16 makeStyles-fontColor-20 css-1u1j92g-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-invalid="false"
        class="MuiOutlinedInput-input MuiInputBase-input css-1trjin0-MuiInputBase-input-MuiOutlinedInput-input"
        id="mui-2"
        type="text"
        value="Value"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1z7n62"
        >
          <span>
            Test
          </span>
        </legend>
      </fieldset>
    </div>
  </div>
</div>
`;

exports[`<TextfieldBase /> should show error color when errorMessage is available 1`] = `
<div>
  <div
    class="MuiFormControl-root MuiTextField-root makeStyles-root-10 makeStyles-root-14 css-1u3bzj6-MuiFormControl-root-MuiTextField-root"
  >
    <label
      class="makeStyles-cssLabel-8 makeStyles-cssLabel-12 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary Mui-error MuiFormLabel-filled css-9p2q6w-MuiFormLabel-root-MuiInputLabel-root"
      data-shrink="true"
      for="mui-1"
      id="mui-1-label"
    >
      Test
    </label>
    <div
      class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl makeStyles-fontColor-9 makeStyles-fontColor-13 css-1u1j92g-MuiInputBase-root-MuiOutlinedInput-root"
    >
      <input
        aria-describedby="mui-1-helper-text"
        aria-invalid="true"
        class="MuiOutlinedInput-input MuiInputBase-input css-1trjin0-MuiInputBase-input-MuiOutlinedInput-input"
        id="mui-1"
        type="text"
        value="Value"
      />
      <fieldset
        aria-hidden="true"
        class="MuiOutlinedInput-notchedOutline css-1d3z3hw-MuiOutlinedInput-notchedOutline"
      >
        <legend
          class="css-1z7n62"
        >
          <span>
            Test
          </span>
        </legend>
      </fieldset>
    </div>
    <p
      class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-contained MuiFormHelperText-filled css-1id7my8-MuiFormHelperText-root"
      id="mui-1-helper-text"
    >
      error message
    </p>
  </div>
</div>
`;
